--- a/src/Components/BCHome/BCHome.scss
+++ b/src/Components/BCHome/BCHome.scss
@@ -1,7 +1,7 @@
 @import "../../globals.scss";
 
-.BCWeekly {
-  .BCWeekly-content-container {
+.BCHome {
+  .BCHome-content-container {
     display: flex;
     justify-content: center;
   }
