--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,5 +1,6 @@
 $font-1: 'sofia-pro', sans-serif;
 $bc-white: #f3f3f3;
+$bc-white-2: #dcdcdc;
 $bc-purple: #6255ff;
 $bc-gray: #626970;
 $bc-gray-2: #262632;
