--- a/src/Components/BCHome/BCHome.scss
+++ b/src/Components/BCHome/BCHome.scss
@@ -11,6 +11,7 @@
       @include bc-text(600);
       font-size: 1.6em;
       padding-bottom: 1.2rem;
+      padding-left: .2rem;
     }
 
     .BCHome-pagination-container {
