Add white open tab to top left of desktop view

--- a/src/Components/BCLogo/bc_logo.scss
+++ b/src/Components/BCLogo/bc_logo.scss
@@ -3,9 +3,10 @@
 .BCLogo {
   // border: 1px solid red;
 
-  &:hover {
-    cursor: pointer;
-  }
+  // whats the point of hovering? this shit doent go anywhere
+  // &:hover {
+  //   cursor: pointer;
+  // }
 
   display: flex;
   align-items: center;
