palying with value for min-max of columns

--- a/src/Components/CollectionList/CollectionList.scss
+++ b/src/Components/CollectionList/CollectionList.scss
@@ -9,22 +9,10 @@ $grid-spacing: 2rem;
 .CollectionList {
   .CollectionList-grid {
     display: grid;
-    // grid-template-columns: 1fr 1fr 1fr 1fr;
-    // grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    // play with this first value written in px
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 
-    // justify-items: center;
-    // justify-content: center;
     grid-row-gap: $grid-spacing;
     grid-column-gap: $grid-spacing;
-
-    // @media (max-width: $tablet-width) { 
-    //   grid-template-columns: 1fr 1fr 1fr;
-    // }
-
-    // @media (max-width: $phone-width) { 
-    //   grid-template-columns: 1fr;
-    // }
-    
   }
 }
