Make red dot go away after clicking on it in little notifcation

--- a/src/Components/SplashBanner/splash_banner.scss
+++ b/src/Components/SplashBanner/splash_banner.scss
@@ -108,6 +108,7 @@
           color: #242a3b;
           border-radius: 20px;
           border: none;
+          font-size: 1.2rem;
           height: 35px;
           width: 300px;
           
