--- a/src/Components/BCModal/BCModal.scss
+++ b/src/Components/BCModal/BCModal.scss
@@ -8,13 +8,17 @@
   right: 0;
   background-color: rgba(0, 0, 0, 0.7);
   padding: 50;
-  z-index: 100;
+  z-index: 1000000;
 
-  .BCModal-content {
-    background-color: #1F1F2B;
-    
+  .BCModal-content-container {
+    .BCModal-content {
+      padding: 4rem 4rem 4rem 4rem;
+    }
+
+    background-color: #1f1f2b;
+
     border-radius: 3px;
-    max-width: 600px;
+    max-width: 400px;
     min-height: 240px;
     margin: 0px;
     position: relative;
@@ -33,9 +37,11 @@
     }
 
     .BCModal-content-top {
-      height: 80px;
+      // height: 80px;
+      // padding: 20px;
 
-      justify-content: center;
+      // border: 1px solid red;
+      justify-content: left;
       display: flex;
       align-items: center;
 
@@ -48,54 +54,16 @@
 
     .BCModal-content-bottom {
       // background: #f3f3f3;
-      padding: 40px 60px;
-      .BCModal-HowTo {
-        color: #a4a4a4;
-        font-size: 1.6rem;
-        padding-bottom: 1rem;
-      }
-      .BCModal-fake-form {
-        height: 5.2rem;
+      padding: 1rem 0.8rem;
+
+      .BCModal-close-button-container {
+        padding-top: 3rem;
         display: flex;
-        .BCModal-url {
-          border-radius: 2px 0px 0px 2px;
-          border: none;
-          height: inherit;
+        justify-content: center;
+      }
 
-          font-size: 1.6rem;
-          color: $bc-gray;
-          width: 70%;
-          padding: 0px 0px 0px 20px;
-          @media (max-width: $phone-width) {
-            display: none;
-          }
-          
-          &:hover {
-            cursor: default;
-          }
-        }
-
-        .BCModal-button {
-          border: none;
-          border-radius: 0px 2px 2px 0px;
-          height: inherit;
-
-          &:hover {
-            cursor: pointer;
-          }
-
-          &:focus {
-            outline: none;
-          }
-          background: $bc-pink;
-          width: 30%;
-          letter-spacing: 3px;
-          color: $bc-white;
-          font-size: 1.2rem;
-          @media (max-width: $phone-width) {
-            width: 100%;
-          }
-        }
+      .Curators-list {
+        padding-top: 2rem;
       }
     }
     @media (max-width: $phone-width) {
