--- a/src/Components/BCWeeklyItem/BCWeeklyItem.scss
+++ b/src/Components/BCWeeklyItem/BCWeeklyItem.scss
@@ -13,16 +13,26 @@
 }
 
 .BCWeeklyItem {
+  position: relative;
   &::after {
     display: block;
-    position: relative;
+    position: absolute;
+    // position: relative;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000000);
-    margin-top: -150px;
-    height: 150px;
+    // margin-top: -150px;
+    // margin-top: -255px;
+    // margin-top: -325px;
+    // height: 150px;
+    height: 100%;
     width: 100%;
-    border-radius: 4px;
+    top: 0;
+    // border-radius: 4px;
     content: "";
   }
+
+  // NEW for smaller episodes
+  height: 150px;
+  overflow: hidden;
 
 
   .BCWeeklyItem-cover-text {
