--- a/src/Components/CollectionDetail/CollectionDetail.scss
+++ b/src/Components/CollectionDetail/CollectionDetail.scss
@@ -88,15 +88,19 @@
 
     .CollectionDetail-content-middle {
       // padding: 0 1rem 0 1rem;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
 
       .CollectionDetail-cover-text {
         @include bc-text();
         width: 100%;
         letter-spacing: normal;
+        padding-left: 2rem;
 
         .CollectionDetail-cover-text-header {
-          font-size: 3.1rem;
-          font-weight: bold;
+          font-size: 2.5rem;
+          font-weight: 600;
         }
         .CollectionDetail-cover-text-subheader {
           font-size: 1.3rem;
@@ -108,13 +112,15 @@
           width: 15px;
           height: 2px;
           background: $bc-pink;
-          margin: 1rem 0 1rem 0;
+          margin: .5rem 0 .5rem 0;
         }
       }
 
       .CollectionDetail-image-container {
-        margin: 2rem 0 2rem 0;
+        margin: 1rem 0 1rem 0;
         position: relative;
+        width: 250px;
+
         .CollectionDetail-play-button-container {
           position: absolute;
           left: 50%;
