--- a/src/index.scss
+++ b/src/index.scss
@@ -45,3 +45,27 @@ input {
   color: $bc-gray-2;
   font-size: 1.2rem;
 }
+
+// SCROLLBAR OVERRIDE
+// https://css-tricks.com/almanac/properties/s/scrollbar/
+
+.bm-menu {
+
+  &::-webkit-scrollbar {
+    background: $bc-gray-2;
+  //   border: 1px solid $bc-gray-2;
+  //   border: 1px solid $bc-gray-2;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    // border: 1px solid $bc-gray-2;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    // border: 1px solid $bc-gray-2;
+  }
+
+
+}
