--- a/src/Components/SplashBanner/splash_banner.scss
+++ b/src/Components/SplashBanner/splash_banner.scss
@@ -46,7 +46,7 @@
       .SplashBanner-message-subheader {
         margin-top: 2rem;
         line-height: 14px;
-        font-size: 13px;
+        font-size: 1.5rem;
       }
       @media (max-width: $phone-width) {
         justify-content: initial;
@@ -58,7 +58,7 @@
         }
 
         .SplashBanner-message-subheader {
-          font-size: 1rem;
+          // font-size: 1rem;
           margin-top: 1rem;
         }
       }
