--- a/src/Components/BCHome/BCHome.scss
+++ b/src/Components/BCHome/BCHome.scss
@@ -8,6 +8,7 @@
     // padding-left: 0.2rem;
   }
   .BCHome-content-container {
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
   }
