--- a/src/Components/CollectionDetail/CollectionDetail.scss
+++ b/src/Components/CollectionDetail/CollectionDetail.scss
@@ -1,4 +1,4 @@
-@import "../../globals.scss";
+@import '../../globals.scss';
 
 .CollectionDetail-copy {
   display: flex;
@@ -33,8 +33,6 @@
     border-radius: 3px;
     margin: 0px;
 
-  
-
     .CollectionDetail-explore-more-container {
       display: flex;
       justify-content: center;
@@ -64,6 +62,7 @@
       width: 1.4rem;
       display: flex;
       justify-content: center;
+      align-items: center;
       background-color: rgba(255, 255, 255, 0.1);
       width: 4rem;
       height: 4rem;
@@ -73,6 +72,11 @@
       // right: 3rem;
       &:hover {
         cursor: pointer;
+      }
+
+      .CollectionDetail-close-icon {
+        width: 20px;
+        height: 20px;
       }
     }
     .CollectionDetail-content-top {
@@ -104,7 +108,7 @@
           width: 15px;
           height: 2px;
           background: $bc-pink;
-          margin: .5rem 0 .5rem 0;
+          margin: 0.5rem 0 0.5rem 0;
         }
       }
 
